<resources>

    <string name="app_name">DiveLog</string>
    
    <string name="main_sites_button_label">Sites</string>
    <string name="main_log_button_label">Log</string>
    <string name="main_exit_button_label">Exit</string>
    
    <string name="logentry_list_add_entry_title">Log Dive</string>
    <string name="logentry_list_settings_title">Dive Settings</string>
    
    <string name="divesite_list_add_entry_title">Add Divesite</string>
    <string name="divesite_list_settings_title">Divesite Settings</string>
    
    <string name="title_activity_logentry_list">DiveLog</string>
    
    <string name="divesite_name_label">Name: </string>
    <string name="divesite_description_label">Description: </string>
    <string name="divesite_save_button_label">Save</string>
    <string name="divesite_cancel_button_label">Cancel</string>
    
    <string name="divesite_edit_entry_title">Edit</string>
    <string name="divesite_delete_entry_title">Delete</string>    

    <string name="logentry_num_label">Nr </string>
    <string name="logentry_divesite_label">Divesite: </string>
    <string name="logentry_description_label">Description: </string>
    <string name="logentry_date_label">Date: </string>
    <string name="logentry_date_hint">yyyy-mm-dd</string>
    <string name="logentry_select_date">Select</string>
    <string name="logentry_duration_label">Duration:</string>
    <string name="logentry_duration_hint">min</string>
    <string name="logentry_gasin_label">Gas in:</string>
    <string name="logentry_gas_hint">bars</string>
    <string name="logentry_gasout_label">Gas out:</string>
    <string name="logentry_depth_label">Depth:</string>
    <string name="logentry_depth_hint">meter</string>
    <string name="logentry_description_hint">description...</string>
    
    <string name="logentry_save_button_label">Save</string>
    <string name="logentry_cancel_button_label">Cancel</string>
    
    <string name="logentry_edit_entry_title">Edit</string>
    <string name="logentry_delete_entry_title">Delete</string>
    

</resources>